--- a/index.html
+++ b/index.html
@@ -869,43 +869,49 @@
     // =========================================================================
     // This code runs instantly. If it finds "action=launch" in the URL, it
     // takes over the page to launch the game and prevents the tool from loading.
-    (function() {
-        try {
-            const urlParams = new URLSearchParams(window.location.search);
-            const action = urlParams.get('action');
+(function() {
+    try {
+        const urlParams = new URLSearchParams(window.location.search);
+        const action = urlParams.get('action');
 
-            if (action === 'launch') {
-                const serverParams = urlParams.get('params');
-                if (serverParams) {
-                    // Display a user-friendly launching message so they know what's happening
-			document.body.innerHTML = `
-			    <div style="font-family: 'Roboto', sans-serif; text-align: center; color: #333; background-color: #f0f2f5; height: 100vh; margin: 0; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-			        <div>
-			             <h1>Launching Insurgency: Sandstorm Server...</h1>
-			             <p>Your server should open shortly. If it doesn't, please ensure Steam is running and you allow steam links.</p>
-			             <p style="font-size: 0.8em; color: #666;">You can close this tab.</p>
-			        </div>
-			    </div>
-                    `;
+        if (action === 'launch') {
+            // 1. Get the parameter. The browser automatically DECODES it.
+            // e.g., "Bab?Scenario=..."
+            const serverParams = urlParams.get('params'); 
 
-                    // The serverParams from the URL are already URI-encoded.
-                    const steamUrl = 'steam://rungameid/581330//' + serverParams;
-                    
-                    // Perform the redirect to launch Steam
-                    window.location.href = steamUrl;
-                } else {
-                    document.body.innerHTML = '<h1>Error: Launch parameters were not found in the link.</h1>';
-                }
-                // This error is thrown intentionally to stop the rest of the script (the tool UI) from running.
-                throw new Error("Redirecting to Steam. Halting further script execution.");
+            if (serverParams) {
+                // Display a user-friendly launching message
+                document.body.innerHTML = `
+                    <div style="font-family: 'Roboto', sans-serif; text-align: center; color: #333; background-color: #f0f2f5; height: 100vh; margin: 0; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                        <div>
+                             <h1>Launching Insurgency: Sandstorm...</h1>
+                             <p>Your game should open shortly. If it doesn't, please ensure Steam is running.</p>
+                             <p style="font-size: 0.8em; color: #666;">You can close this tab.</p>
+                        </div>
+                    </div>
+                `;
+
+                // 2. *** THE FIX IS HERE ***
+                // We must RE-ENCODE the string before passing it to the steam:// protocol.
+                // e.g., "Bab%3FScenario%3D..."
+                const steamUrl = 'steam://rungameid/581330//' + encodeURIComponent(serverParams);
+                
+                // 3. Perform the redirect with the correctly encoded URL.
+                window.location.href = steamUrl;
+
+            } else {
+                document.body.innerHTML = '<h1>Error: Launch parameters were not found in the link.</h1>';
             }
-        } catch (e) {
-            // We expect the "Halting" error, so we only log other unexpected errors.
-            if (!e.message.startsWith("Redirecting to Steam")) {
-                console.error("An error occurred in the redirect handler:", e);
-            }
+            // This error is thrown intentionally to stop the rest of the script (the tool UI) from running.
+            throw new Error("Redirecting to Steam. Halting further script execution.");
         }
-    })();
+    } catch (e) {
+        // We expect the "Halting" error, so we only log other unexpected errors.
+        if (!e.message.startsWith("Redirecting to Steam")) {
+            console.error("An error occurred in the redirect handler:", e);
+        }
+    }
+})();
     // =========================================================================
     // == END OF REDIRECT HANDLER                                             ==
     // =========================================================================
